¯\_(ツ)_/¯ messages are starting to look good front end

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/fitsociallogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
@@ -10,11 +10,11 @@
       name="description"
       content="Stay active during the quarantine"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/fitsociallogo.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Workout Challenge</title>
+    <title>fitsocial</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
