messages styling and functionality

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
       name="description"
       content="Stay active during the quarantine"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/fitsociallogo.png" />
-
+    <link rel="apple-touch-icon" href="./img/fitsociallogo.png" />
+    <link rel="icon" href="./img/fitsociallogo.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>fitsocial</title>
